2019-1/221/users/4100/executions/1589_2894.log
== TEST (2019-03-21 08:38:27) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
print = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = float("Qual o valode unitario do jogo? "*8)

# Impressao do valor total:
print(input("qual o valor unitario do jogo? "+45))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = float("Qual o valode unitario do jogo? "*8)
ValueError: could not convert string to float: 'Qual o valode unitario do jogo? Qual o valode unitario do jogo? Qual o valode unitario do jogo? Qual o valode unitario do jogo? Qual o valode unitario do jogo? Qual o valode unitario do jogo? Qual o valode unitario do jogo? Qual o valode unitario do jogo? '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 08:40:56) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
print = float(input("Escreva o valor do jogo "))

# Calculo do valor a ser pago, incluindo o frete:
total = float(*8)

# Impressao do valor total:
print(float(+45))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = float(*8)
TypeError: type object argument after * must be an iterable, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 08:41:39) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
print = float(input("Escreva o valor do jogo "))

# Calculo do valor a ser pago, incluindo o frete:
total = float((input*8)

# Impressao do valor total:
print(float(+45))
-- ERROR:
File "XXXX", line 11
    print(float(+45))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 08:41:55) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
print = float(input("Escreva o valor do jogo "))

# Calculo do valor a ser pago, incluindo o frete:
total = float((input(*8))

# Impressao do valor total:
print(float(+45))
-- ERROR:
File "XXXX", line 11
    print(float(+45))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 08:45:25) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
print = float(input("Escreva o valor do jogo "))

# Calculo do valor a ser pago, incluindo o frete:
total = float(var*8)

# Impressao do valor total:
print(float(+45))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = float(var*8)
NameError: name 'var' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 09:10:01) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
print = float(input("Escreva o valor do jogo "))

# Calculo do valor a ser pago, incluindo o frete:
total = float(var *8)

# Impressao do valor total:
print(float(+45))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = float(var *8)
NameError: name 'var' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 09:10:31) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
print = float(input("Escreva o valor do jogo "))

# Calculo do valor a ser pago, incluindo o frete:
total = float((input) *8)

# Impressao do valor total:
print(float(+45))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = float((input) *8)
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 09:10:50) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
print = float(input("Escreva o valor do jogo "))

# Calculo do valor a ser pago, incluindo o frete:
total = float(input *8)

# Impressao do valor total:
print(float(+45))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = float(input *8)
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 09:10:50) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
print = float(input("Escreva o valor do jogo "))

# Calculo do valor a ser pago, incluindo o frete:
total = float(input *8)

# Impressao do valor total:
print(float(+45))
-- EXECUTION TIME:
0.194912
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1589/2894/main.py", line 8, in <module>
    total = float(input *8)
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 09:12:59) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
print = float(input("Escreva o valor do jogo "))

# Calculo do valor a ser pago, incluindo o frete:
total = float("Escreva o valor do jogo" *8)

# Impressao do valor total:
print(float(+45))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = float("Escreva o valor do jogo" *8)
ValueError: could not convert string to float: 'Escreva o valor do jogoEscreva o valor do jogoEscreva o valor do jogoEscreva o valor do jogoEscreva o valor do jogoEscreva o valor do jogoEscreva o valor do jogoEscreva o valor do jogo'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 09:19:18) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
print = float(input("Escreva o valor do jogo "))
float = (input("Escreva o valor do jogo"))
# Calculo do valor a ser pago, incluindo o frete:
total = float( *8 )

# Impressao do valor total:
print(float(+45))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    float = (input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:21:44) 
-- CODE:

var = float(input("digite o valor do jogo")	
frete = 45
				float(input(*8))
-- ERROR:
File "XXXX", line 3
    frete = 45
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 08:49:16) 
-- CODE:
var = int(input("digite o valor do jogo")	
frete = 45	
			 total = (var*8)+frete
			 print(total)
-- ERROR:
File "XXXX", line 2
    frete = 45	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 08:50:28) 
-- CODE:
var = int(input("digite o valor do jogo")	
frete = 45	
			 total = var*8+frete
			 print(total)
-- ERROR:
File "XXXX", line 2
    frete = 45	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 08:51:33) 
-- CODE:
var = float(input("digite o valor do jogo")	
frete = 45	
total = var*8+frete
			 print(total)
-- ERROR:
File "XXXX", line 2
    frete = 45	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 08:52:02) 
-- CODE:
var = float(input("digite o valor do jogo")	
f = 45	
total = var*8+frete
			 print(total)
-- ERROR:
File "XXXX", line 2
    f = 45	
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 08:52:29) 
-- CODE:
var = float(input("digite o valor do jogo")		
total = var * 8 + 45
			 print(total)
-- ERROR:
File "XXXX", line 2
    total = var * 8 + 45
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 08:52:40) 
-- CODE:
var = float(input("digite o valor do jogo")		
total = var * 8 + 45
print(total)
-- ERROR:
File "XXXX", line 2
    total = var * 8 + 45
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 08:53:20) 
-- CODE:
var = float(input("digite o valor do jogo")		
total = var * 8 + 45
print(total)
-- ERROR:
File "XXXX", line 2
    total = var * 8 + 45
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 08:54:43) 
-- CODE:
var = float(input("digite o valor do jogo:"))
total = var * 8 +45
print( total )
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 08:54:59) 
-- CODE:
var = float(input("digite o valor do jogo:"))
total = var * 8 +45
print( total )
-- EXECUTION TIME:
0.197762
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
